# future-dynamics-hotels

./: .gitignore  README.md  pyproject.toml
future_dynamics_bi/: dbt_project.yml
future_dynamics_bi/models/: price_trends.sql  sources.yml
future_dynamics_bi/models/staging/: buy_positions.sql  dates.sql  hotel_prices.py
