[project]
name = "future-dynamics-bi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "dbt>=1.0.0.35.22",
    "dbt-core>=1.7.7",
    "dbt-duckdb>=1.7.1",
    "duckdb>=0.9.2",
    "jupyterlab>=4.1.0",
    "numpy>=1.26.3",
    "pandas>=2.2.0",
    "pendulum>=3.0.0",
    "predicthq>=3.1.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
